feat: code updated

--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Primary Meta Tags -->
+  <title>Amandeep Portfolio</title>
+  <meta name="title" content="Amandeep Portfolio">
+  <meta name="description"
+    content="I'm Amandeep Kumar, a computer science student with a passion for front-end development. I'm skilled in React, JavaScript, CSS, Tailwind CSS, and SCSS. When I'm not coding, I enjoy playing online games, watching Bollywood movies, and following cricket matches. I've completed exciting projects, including Pokédex Game using Javascript and blog application using React, which provided me with valuable experience in different technologies and collaboration. My ultimate goal is to become a front-end engineer and work on innovative projects that push the boundaries of what's possible.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://amandeep-portfolio-sand.vercel.app/">
+  <meta property="og:title" content="Amandeep Portfolio">
+  <meta property="og:description"
+    content="I'm Amandeep Kumar, a computer science student with a passion for front-end development. I'm skilled in React, JavaScript, CSS, Tailwind CSS, and SCSS. When I'm not coding, I enjoy playing online games, watching Bollywood movies, and following cricket matches. I've completed exciting projects, including Pokédex Game using Javascript and blog application using React, which provided me with valuable experience in different technologies and collaboration. My ultimate goal is to become a front-end engineer and work on innovative projects that push the boundaries of what's possible.">
+  <meta property="og:image"
+    content="https://user-images.githubusercontent.com/90441055/236464516-324ea4ca-64cb-41b7-b36a-202fa95e48cc.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://amandeep-portfolio-sand.vercel.app/">
+  <meta property="twitter:title" content="Amandeep Portfolio">
+  <meta property="twitter:description"
+    content="I'm Amandeep Kumar, a computer science student with a passion for front-end development. I'm skilled in React, JavaScript, CSS, Tailwind CSS, and SCSS. When I'm not coding, I enjoy playing online games, watching Bollywood movies, and following cricket matches. I've completed exciting projects, including Pokédex Game using Javascript and blog application using React, which provided me with valuable experience in different technologies and collaboration. My ultimate goal is to become a front-end engineer and work on innovative projects that push the boundaries of what's possible.">
+  <meta property="twitter:image" content="https://user-images.githubusercontent.com/90441055/236464516-324ea4ca-64cb-41b7-b36a-202fa95e48cc.png
+  ">
   <title>Amandeep Portfolio</title>
 </head>
 
